--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,11 @@
           align-items: center;
           margin: 20px;
           width: 100%;
+          h3{
+            text-indent: 10px;
+            line-height: 1.4;
+            letter-spacing: .3px;
+          }
         }
         .photo {
           background-image: url(https://www.w3schools.com/w3images/fjords.jpg);
@@ -68,6 +73,11 @@
           align-items: center;
           margin: 20px;
           width: 100%;
+          h3{
+            text-indent: 10px;
+            line-height: 1.2;
+            letter-spacing: .3px;
+          }
         }
         .photo {
           background-image: url(https://www.w3schools.com/w3images/fjords.jpg);
@@ -91,10 +101,10 @@
       height: 500px;
     }
     :nth-child(1) {
-      background-image: url(https://www.w3schools.com/w3images/fjords.jpg);
+      background-image: url("./assets/images/poza1.jpg");
     }
     :nth-child(2) {
-      background-image: url(https://www.w3schools.com/w3images/lights.jpg);
+      background-image: url("./assets/images/poza2.jpeg");
     }
     :nth-child(3) {
       background-image: url(https://www.w3schools.com/w3images/nature.jpg);
@@ -173,4 +183,133 @@ hr {
         margin-bottom: 0.5rem;
     }
   }
+}
+
+.faculties{
+  display: flex;
+  flex-direction: column;
+  .faculties-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 10rem;
+    hr{
+      margin: 0;
+      margin-left: 1rem;
+    }
+    h1{
+      font-size: 60px;
+      font-weight: bold;
+      color: #000;
+    }
+  }
+
+
+  .faculties-list{
+    margin-top: 7rem;
+    ul{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: center;
+      li{
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        //display 5 items on a row with flex basis
+        flex-basis: calc(100% / 5 - 20px);
+        margin: 10px;
+        justify-content: center;
+        align-items: center;
+        // nice gray rounded border
+        border: 2px solid #C0C0C0;
+        border-radius: 10px;
+        .name-check{
+          display: flex;
+          flex-direction: row;
+          h4{
+            text-align: center;
+          }
+        }
+        p{
+          display: none;
+        }
+        h3{
+          display: none;
+        }
+        span{
+          display: none;
+          text-align: center;
+        }
+        &:hover, &:focus , &:active{
+          p{
+            display: block;
+          }
+          h3{
+            display: block;
+          }
+          span{
+            display: block;
+          }
+        }
+        svg{
+          color: green;
+          font-size: 25px;
+          margin-left: 8px;     
+        }
+        h4{
+          font-size: 20px;
+          font-weight: bold;
+          //light gray
+          color: #C0C0C0;
+        }
+      }
+    }
+  }
+}
+
+.sponsors{
+  display: flex;
+  flex-direction: column;
+  .sponsors-list{
+    margin-top: 10rem;
+    ul{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: center;
+      list-style-type: none;
+      li{
+        margin: 20px;
+      }
+    }
+  }
+  .sponsors-header{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 10rem;
+    hr{
+      margin: 0;
+      margin-left: 1rem;
+    }
+    h1{
+      font-size: 60px;
+      font-weight: bold;
+      color: #000;
+    }
+  }
+}
+
+.logo{
+  background-image: url("./assets/images/logo.png");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+
 }
