--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 
+$button-bg-color: #348AA7;
+$button-border-color: #166E84;
+
 .container {
   display: flex;
   flex-direction: row;
@@ -46,10 +49,10 @@
           align-items: center;
           margin: 20px;
           width: 100%;
-          h3{
+          h3 {
             text-indent: 10px;
             line-height: 1.4;
-            letter-spacing: .3px;
+            letter-spacing: 0.3px;
           }
         }
         .photo {
@@ -57,8 +60,10 @@
           background-size: cover;
           background-position: center;
           width: 100%;
-          height: 75%;
+          height: 50%;
           margin: 25px;
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
         }
       }
       .doi {
@@ -73,10 +78,10 @@
           align-items: center;
           margin: 20px;
           width: 100%;
-          h3{
+          h3 {
             text-indent: 10px;
             line-height: 1.2;
-            letter-spacing: .3px;
+            letter-spacing: 0.3px;
           }
         }
         .photo {
@@ -86,6 +91,8 @@
           width: 100%;
           height: 75%;
           margin: 25px;
+          border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px;
         }
       }
     }
@@ -162,33 +169,33 @@ hr {
     align-items: center;
     width: 100%;
     height: 100%;
-    &:nth-child(1){
-      .professor-photo{
+    &:nth-child(1) {
+      .professor-photo {
         background-image: url("./assets/images/profesori/lucian.jpg");
       }
     }
-    &:nth-child(2){
-      .professor-photo{
+    &:nth-child(2) {
+      .professor-photo {
         background-image: url("./assets/images/profesori/nicoleta.jpeg");
       }
     }
-    &:nth-child(3){
-      .professor-photo{
+    &:nth-child(3) {
+      .professor-photo {
         background-image: url("./assets/images/profesori/unknown2.png");
       }
     }
-    &:nth-child(4){
-      .professor-photo{
+    &:nth-child(4) {
+      .professor-photo {
         background-image: url("./assets/images/profesori/unknown.png");
       }
     }
-    &:nth-child(5){
-      .professor-photo{
+    &:nth-child(5) {
+      .professor-photo {
         background-image: url("./assets/images/profesori/unknown1.png");
       }
     }
-    &:nth-child(6){
-      .professor-photo{
+    &:nth-child(6) {
+      .professor-photo {
         background-image: url("./assets/images/profesori/unknown3.png");
       }
     }
@@ -210,43 +217,42 @@ hr {
       background-position: center;
       background-repeat: no-repeat;
     }
-    .professor-faculty{
-        margin-top: 1rem;
-        margin-bottom: 0.5rem;
+    .professor-faculty {
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
     }
   }
 }
 
-.faculties{
+.faculties {
   display: flex;
   flex-direction: column;
-  .faculties-header{
+  .faculties-header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     margin-top: 10rem;
-    hr{
+    hr {
       margin: 0;
       margin-left: 1rem;
     }
-    h1{
+    h1 {
       font-size: 60px;
       font-weight: bold;
       color: #000;
     }
   }
 
-
-  .faculties-list{
+  .faculties-list {
     margin-top: 7rem;
-    ul{
+    ul {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-around;
       align-items: center;
-      li{
+      li {
         display: flex;
         flex-direction: column;
         padding: 20px;
@@ -256,80 +262,82 @@ hr {
         justify-content: center;
         align-items: center;
         // nice gray rounded border
-        border: 2px solid #C0C0C0;
+        border: 2px solid #c0c0c0;
         border-radius: 10px;
-        .name-check{
+        .name-check {
           display: flex;
           flex-direction: row;
-          h4{
+          h4 {
             text-align: center;
           }
         }
-        p{
+        p {
           display: none;
         }
-        h3{
+        h3 {
           display: none;
         }
-        span{
+        span {
           display: none;
           text-align: center;
         }
-        &:hover, &:focus , &:active{
-          p{
+        &:hover,
+        &:focus,
+        &:active {
+          p {
             display: block;
           }
-          h3{
+          h3 {
             display: block;
           }
-          span{
+          span {
             display: block;
           }
         }
-        svg{
+        svg {
           color: green;
           font-size: 25px;
-          margin-left: 8px;     
+          margin-left: 8px;
         }
-        h4{
+        h4 {
           font-size: 20px;
           font-weight: bold;
           //light gray
-          color: #C0C0C0;
+          color: #c0c0c0;
         }
       }
     }
   }
 }
 
-.sponsors{
+.sponsors {
   display: flex;
   flex-direction: column;
-  .sponsors-list{
+  .sponsors-list {
     margin-top: 10rem;
-    ul{
+    ul {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-around;
       align-items: center;
       list-style-type: none;
-      li{
+      li {
         margin: 20px;
       }
     }
   }
-  .sponsors-header{
+  .sponsors-header {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-around;
     align-items: center;
     margin-top: 10rem;
-    hr{
+    hr {
       margin: 0;
       margin-left: 1rem;
     }
-    h1{
+    h1 {
       font-size: 60px;
       font-weight: bold;
       color: #000;
@@ -337,11 +345,78 @@ hr {
   }
 }
 
-.logo{
+.logo {
   background-image: url("./assets/images/logo.png");
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 100%;
+}
 
+//form
+.formm {
+  //center the form
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  h2 {
+    font-size: 50px;
+    font-weight: bold;
+    color: #000;
+    margin-bottom: 5rem;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    input {
+      margin: 0.5rem;
+      padding: 10px 7px;
+      outline: none;
+      border: none;
+      border-bottom: 2px solid black;
+      font-size: 1rem;
+      font-weight: bold;
+      color: #000;
+      transition: 0.25s;
+      &:focus,
+      &:active,
+      &:hover {
+        border-bottom: 2px solid green;
+      }
+    }
+  }
+  button {
+    margin-top: 3rem;
+    display: inline-block;
+    padding: 15px;
+    margin-right: 5px;
+    height: 50px;
+    min-width: 100px;
+    background: $button-bg-color;
+    border: none;
+    outline: none;
+    color: white;
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 20px;
+    border-radius: 3px;
+    box-shadow: 0 5px 0px darken($button-bg-color, 0%);
+    border-bottom: 2px solid darken($button-bg-color, 3%);
+
+    &:hover {
+      background: darken($button-bg-color, 5%);
+      box-shadow: 0 4px 1px darken($button-bg-color, 5%);
+      border-bottom: 2px solid darken($button-bg-color, 8%);
+      transition: all 0.1s ease-in;
+    }
+
+    &:active {
+      transform: translateY(4px);
+      border-bottom-width: 2px;
+      box-shadow: none;
+    }
+  }
 }
