--- a/src/Responsive.scss
+++ b/src/Responsive.scss
@@ -1,130 +1,182 @@
 @media only screen and (max-width: 600px) {
-    .image{
+  .logo-name {
+   
+    text-align: center;
+    .logo{
         display: none;
     }
-    .unu{
-        flex-direction: column-reverse !important;
-        .photo{
-            width: 85% !important;
-            height: 400px !important;
-        }
-        .text{
-            h3{
-                margin: 10px !important;
-                text-align: center;
-            }
-        }
+    span {
+      display: none;
     }
-    .doi{
-        flex-direction: column-reverse !important;
-        .photo{
-            width: 85% !important;
-            height: 400px !important;
-        }
-        .text{
-            h3{
-                margin: 10px !important;
-                text-align: center;
-            }
-        }
+  }
+  .image {
+    display: none;
+  }
+  .unu {
+    flex-direction: column-reverse !important;
+    .photo {
+      width: 85% !important;
+      height: 400px !important;
     }
-    .professors{
-        flex-direction: column-reverse !important;
-        .photo{
-            width: 85% !important;
-            height: 400px !important;
-        }
-        .text{
-            h3{
-                margin: 10px !important;
-                text-align: center;
-            }
-        }
-        .professor{
-            margin-top: 20px;
+    .text {
+      h3 {
+        margin: 10px !important;
+        text-align: center;
+      }
+    }
+  }
+  .doi {
+    flex-direction: column-reverse !important;
+    .photo {
+      width: 85% !important;
+      height: 400px !important;
+    }
+    .text {
+      h3 {
+        margin: 10px !important;
+        text-align: center;
+      }
+    }
+  }
+  .professors {
+    flex-direction: column !important;
+    .photo {
+      width: 85% !important;
+      height: 400px !important;
+    }
+    .text {
+      h3 {
+        margin: 10px !important;
+        text-align: center;
+      }
+    }
+    .professor {
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+  }
+
+  .faculties-header{
+    hr{
+        display: none;
+    }
+    span{
+        display: none;
+    }
+  }
+  
+  .sponsors-header{
+     hr{
+        display: none;
+    }
+    span{
+        display: none;
+    } 
+  }
+
+  .formm{
+      text-align: center;
+      input{
+            width: 80%;
             margin-bottom: 10px;
-        }
-    }
+      }
+      button{
+          margin: 1rem;
+      }
+  }
+  .professor-name{
+      text-align: center;
+  }
 }
 
-
 @media only screen and (min-width: 600px) and (max-width: 900px) {
-    .professors{
-        flex-direction: column-reverse !important;
-        .photo{
-            width: 85% !important;
-            height: 400px !important;
-        }
-        .text{
-            h3{
-                margin: 10px !important;
-                text-align: center;
-            }
-        }
-        .professor{
-            margin-top: 20px;
-            margin-bottom: 10px;
-        }
+  .professors {
+    flex-direction: column-reverse !important;
+    .photo {
+      width: 85% !important;
+      height: 400px !important;
     }
-    .image{
-        display: none;
+    .text {
+      h3 {
+        margin: 10px !important;
+        text-align: center;
+      }
     }
-    .unu{
-        flex-direction: column-reverse !important;
-        .photo{
-            width: 85% !important;
-            height: 600px !important;
-        }
-        .text{
-            h3{
-                margin: 10px !important;
-                text-align: center;
-            }
-        }
+    .professor {
+      margin-top: 20px;
+      margin-bottom: 10px;
     }
-    .doi{
-        flex-direction: column-reverse !important;
-        .photo{
-            width: 85% !important;
-            height: 600px !important;
-        }
-        .text{
-            h3{
-                margin: 10px !important;
-                text-align: center;
-            }
-        }
+  }
+  .image {
+    display: none;
+  }
+  .unu {
+    flex-direction: column-reverse !important;
+    .photo {
+      width: 85% !important;
+      height: 600px !important;
     }
+    .text {
+      h3 {
+        margin: 10px !important;
+        text-align: center;
+      }
+    }
+  }
+  .doi {
+    flex-direction: column-reverse !important;
+    .photo {
+      width: 85% !important;
+      height: 600px !important;
+    }
+    .text {
+      h3 {
+        margin: 10px !important;
+        text-align: center;
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 768px) {
+  .image {
+    display: none;
+  }
+  .unu {
+    flex-direction: column-reverse !important;
+    .photo {
+      width: 85% !important;
+      height: 600px !important;
+    }
+    .text {
+      h3 {
+        margin: 10px !important;
+        text-align: center;
+      }
+    }
+  }
+  .doi {
+    flex-direction: column-reverse !important;
+    .photo {
+      width: 85% !important;
+      height: 600px !important;
+    }
+    .text {
+      h3 {
+        margin: 10px !important;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1024px){
     .image{
         display: none;
     }
     .unu{
-        flex-direction: column-reverse !important;
         .photo{
-            width: 85% !important;
-            height: 600px !important;
-        }
-        .text{
-            h3{
-                margin: 10px !important;
-                text-align: center;
-            }
-        }
-    }
-    .doi{
-        flex-direction: column-reverse !important;
-        .photo{
-            width: 85% !important;
-            height: 600px !important;
-        }
-        .text{
-            h3{
-                margin: 10px !important;
-                text-align: center;
-            }
+            height: 75% !important;
         }
     }
 }
