--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,34 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-$button-bg-color: #348AA7;
-$button-border-color: #166E84;
+@font-face {
+  font-family: "Avenir";
+  src: url("./assets/fonts/avenir.otf");
+}
+
+h1,
+h2,
+h4,
+input,
+button {
+  font-family: Avenir;
+}
+
+h3 {
+  font-family: "Montserrat", sans-serif;
+}
+
+span {
+  font-family: "Roboto", sans-serif;
+}
+$button-bg-color: #348aa7;
+$button-border-color: #166e84;
 
 .container {
   display: flex;
@@ -28,6 +51,7 @@ $button-border-color: #166E84;
         font-size: 30px;
         font-weight: bold;
         color: #000;
+        font-family: Avenir;
       }
     }
     .text-photo {
@@ -53,6 +77,9 @@ $button-border-color: #166E84;
             text-indent: 10px;
             line-height: 1.4;
             letter-spacing: 0.3px;
+            &::first-letter {
+              font-size: 200%;
+            }
           }
         }
         .photo {
@@ -82,6 +109,9 @@ $button-border-color: #166E84;
             text-indent: 10px;
             line-height: 1.2;
             letter-spacing: 0.3px;
+            &::first-letter {
+              font-size: 200%;
+            }
           }
         }
         .photo {
