--- a/src/App.scss
+++ b/src/App.scss
@@ -450,3 +450,48 @@ hr {
     }
   }
 }
+
+
+.links{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rem;
+  margin-bottom: 5rem;
+  h1{
+    font-size: 50px;
+    font-weight: bold;
+    color: #000;
+  }
+  .end{
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .frontend{
+      background-image: url("./assets/images/frontend.png");
+      background-size: cover;
+      background-position: center;
+      width: 200px;
+      height: 200px;
+      margin-right: 5rem;
+    }
+    .backend{
+      background-image: url("./assets/images/backend.png");
+      background-size: cover;
+      background-position: center;
+      width: 200px;
+      height: 200px;
+      margin-left: 5rem;
+    }
+  }
+  .apk{
+      background-image: url("./assets/images/apk.png");
+      background-size: cover;
+      background-position: center;
+      width: 200px;
+      height: 200px;
+    }
+}
